# NaviGator

./: .gitignore  01_mispellings.md  01_mispellings.txt  03_a_different_phrasing.md  03_a_different_phrasing.txt  03_b_different_phrasing.md  03_b_different_phrasing.txt  README.md  answer.md  build_ffl_db.py  codejam_ai_search_ex.ipynb  create_an_index.py  examples  functions.py  llama3_test.py  openai_azure.ipynb  pyproject.toml  pytest.ini  requirements.txt  sample.md  sample_data  scraping.ipynb  stderr  tree
.github/workflows/: azure-static-web-apps-lively-field-096dab40f.yml
navigator-py/: azure_oai_provider.py  openai_request.py
navigator-ui/: index.html
navigator-ui/static/: cic-chat-ui.js  fontawesome.css  styles.css
navigator_py/: api.py  app.py  brave_api.py  config.py  generative_ai_provider.py  generative_ai_request.py  main.py  pyproject.toml  test_async.py
navigator_py/flow/: __init__.py
navigator_py/models/: __init__.py  single_multiple_no_response.py  yes_no_response.py
navigator_py/prompts/: __init__.py  basic_spira_prompt.py  evaluate_whether_or_not_article_is_useful.py  evaluate_whether_or_not_question_has_been_answered.py  has_single_multiple_or_no_questions.py  is_asking_about_spira.py  use_articles_to_generate_answer.py
navigator_py/search/: __init__.py  search.ipynb  (+2 more)
presentation/: 01_mispellings.md  01_mispellings__thoughts.md  02_irrelevant.txt  02_irrelevant__thoughts.md  03_a_different_phrasing.md  03_b_different_phrasing.md  04_multiple_queries_in_prompt.md  04_multiple_queries_in_prompt.txt  answer.md  examples  sample.md
(+11 files in other folders)
