[project]
name = "navigator"
version = "0.1.0"
description = "First repo setting up what I need"
authors = [
    { name = "Andy Weaver", email = "andrew_weaver@cinfin.com" }
]
dependencies = [
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.2",
    "polars>=0.20.31",
    "duckdb>=1.0.0",
    "pyarrow>=16.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["navigator_py"]